--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Scoring system</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="javascripts/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="javascripts/js.js"></script>
+    <script type="text/javascript" src="Javascripts/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="Javascripts/js.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
 </head>
 <body>
